# observer

./: .gitignore  LICENSE  README.md  docker-compose.yml  podman-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-audit.yml
backend/: Containerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260720_manitos_ingest.py  623c57886e29_initial_schema.py
backend/app/: __init__.py  auth.py  main.py  ratelimit.py  websocket.py
backend/app/api/: __init__.py  analytics.py  evaluations.py  manitos_ingest.py  traces.py
backend/app/db/: __init__.py  postgres.py
backend/app/evaluators/: __init__.py  rubric_engine.py
backend/app/evaluators/rubrics/: default.yaml  scoring_levels.json
backend/app/models/: __init__.py  evaluation.py  ingestion.py  trace.py
backend/app/ops/: __init__.py  manitos_passive_gate.py
backend/tests/: conftest.py  test_api.py  test_manitos_ingest.py  test_manitos_passive_gate.py  test_rubric.py
cli/: README.md  pyproject.toml
cli/cli/: __init__.py  db.py  main.py
cli/cli/commands/: __init__.py
cli/tests/: test_cli.py
dashboard/: Containerfile  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: ErrorBoundary.tsx  TraceWaterfall.tsx  shared.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/pages/: Evaluations.tsx  Overview.tsx  TraceDetail.tsx  Traces.tsx
docs/: manitos-integration.md  proot-development.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/llm_observatory/: __init__.py  pricing.py  tracer.py
sdk/python/src/llm_observatory/exporters/: __init__.py  otlp.py
sdk/python/src/llm_observatory/instrumentors/: __init__.py  anthropic.py  langchain.py  openai.py
sdk/python/tests/: test_instrumentors.py  test_tracer.py
sdk/typescript/: README.md  package-lock.json  package.json
sdk/typescript/src/: index.ts  pricing.ts  tracer.test.ts  tracer.ts
sdk/typescript/src/exporters/: index.ts  otlp.test.ts  otlp.ts
sdk/typescript/src/instrumentors/: anthropic.ts  index.ts  openai.ts
