[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-observatory-backend"
version = "0.1.0"
description = "Backend API for LLM Observatory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
sqlite = [
    "aiosqlite>=0.20.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "aiosqlite>=0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
