[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-observatory-cli"
version = "0.1.0"
description = "CLI for LLM Observatory"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
llm-observatory = "cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["cli"]
